YAML/node-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nodejs-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nodejs-vs
spec:
  hosts:
  - "*"
  gateways:
  - nodejs-gateway
  http:
  - match:
    - uri:
        prefix: /moreIstio
    route:
    - destination:
        host: nodejs-svc
        subset: v3  
  - route:
    - destination:
        host: nodejs-svc
        subset: v1
      weight: 50
    - destination:
        host: nodejs-svc
        subset: v2
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nodejs-dr
spec:
  host: nodejs-svc
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
