YAML/node-proms.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prom-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 15030
      name: http-prom
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prom-vs
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - prom-gateway
  http:
  - match:
    - port: 15030
    route:
    - destination:
        host: prometheus
        port:
          number: 9090
